              for better performance.
        Struct FacetSpec<dim>:
            - New routines for tight encodings and decodings.
        Class HilbertPrimal:
            - The header no longer includes the Normaliz headers (which
              Regina does not actually ship with its development files).
        Class Integer:
            - New tightDecoding() routines.
        Class IntersectionForm:
            - New class to compute invariants of intersection forms.
        Class Isomorphism<dim>:
            - Replaced apply() with the bracket operator.  The old apply()
              is now a deprecated alias.
            - Deprecated applyInPlace(), since this is no faster than
              calling tri = iso(tri).
            - Added bracket operators to apply an isomorphism to a
              FacetSpec or a FacetPairing.
            - Added pre/postincrement operators for iterating through
              all permutations of a given size.
            - New routines for tight encodings and decodings.
        Class LargeInteger:
            - New tightDecoding() routines.
        Class Laurent<T>, Laurent2<T>:
            - New tightDecoding() routines.
        Class Link:
            - New routines for tight encodings and decodings.
            - Routines dtData(), gaussData(), jenkinsData() and pdData() now
              throw exceptions if the link is so large that the C++ int type
              is not large enough to hold the values being returned.
            - The Jones and HOMFLY-PT routines now throw exceptions if the
              link is so insanely large that strand IDs cannot fit into ints.
            - The Jones backtracking algorithm now supports 63 crossings on
              all platforms, even if the long type has only 32 bits.
        Class Matrix:
            - Routine det() now throws an exception if the matrix is not
              square (this is a precondition), and now returns 1 if the